--- a/main.css
+++ b/main.css
@@ -2,17 +2,15 @@ body {
   background-image: url("https://keyassets-p2.timeincuk.net/wp/prod/wp-content/uploads/sites/53/2017/10/Great-Btisih-Bake-Off-set-contestants-2017.jpg");
  }
 
+
 main{
-  background-color: #F8F7FF ;
-  margin: 20px 20px 20px 20px;
-  padding: 10px 10px 10px 10px;
-  }
+    background-color: #F8F7FF ;
+    margin: 20px 20px 20px 20px;
+    padding: 10px 10px 10px 10px;
+    }
+  
 
 /* Start Page Css */
-.startPage{
-
-}
-
 .startPage h1{
  text-align: center;
  font-family: 'Poppins', sans-serif;
@@ -29,7 +27,10 @@ main{
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
+}
 
+.Prue {
+  display: none;
 }
 
 .start-button-center{
@@ -102,9 +103,9 @@ form{
   border-color: #897C80;
 }
 
-failed img{
+.failed img{
   display: flex;
-  width: 30%;
+  width: 100%;
   height: 100%;
 }
 
@@ -143,13 +144,8 @@ failed img{
 
 
 @media all and (min-width: 800px) {
+  .Prue {
+    display: block;
+  }
 
-  main{
-    background-color: #F8F7FF ;
-    margin: 20px 20px 20px 20px;
-    padding: 10px 10px 10px 10px;
-    }
-
-
-  
 }
